--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,12 @@ body{
 h1,h2,p{
     margin: 0;
 }
+#myH1{
+  font-size: 30px;
+  color: #5361FF;
+  margin-left: 15px;
+}
+
 ul{
     margin: 0;
     padding: 0;
@@ -68,8 +74,10 @@ ul{
 }
 a{
     text-decoration: none;
-    color: var(--text-color);
+    color: white;
 }
+
+
 img{
   max-width: 100%;
   height: auto;
@@ -230,6 +238,14 @@ img{
 }
 .about_text{
   margin-bottom: var(--mb-4);
+}
+.a{
+  font-weight: bold;
+  text-decoration: none;
+  color: #5361FF;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #5361FF;
 }
 .about_profession{
   display: block;
@@ -452,4 +468,18 @@ footer_link:hover{
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.button1{
+  background-color: #5361FF;
+  border: none;
+  color: white;
+  height: 45px;
+  width: 95px;
+  border-radius: 15px;
+
+}
+
+button:hover{
+  background-color: #4a4f85;
 }
